--- a/backend/app/templates/rules.html
+++ b/backend/app/templates/rules.html
@@ -1,7 +1,7 @@
 <div class="row">
   <div class="col-md-9">
     <ul>
-      <li>Nicht mobil angepasst. Der größte Spielspaß besteht am Tablet oder PC / Laptop.</li>
+      <li>Der größte Spielspaß besteht am Tablet oder PC / Laptop.</li>
       <li>Der Spieler, der das Spiel erzeugt ist auch die Bank und muss alle Chips verteilen (Dies ermöglicht flexible Regeln)!</li>
       <li>Wenn ein Zug vor dem dritten Würfeln beendet werden soll, bitte "Ende" klicken</li>
       <li>Zu jeden Zeitpunkt kann auf bzw. zu gedeckt werden.</li>
