add new statistics remove halt bool and replace with int

--- a/backend/app/static/styles/style.css
+++ b/backend/app/static/styles/style.css
@@ -112,6 +112,23 @@ br {
  border-radius: 10px;
 }
 
+input[type=checkbox]
+{
+  /* Double-sized Checkboxes */
+  -ms-transform: scale(2); /* IE */
+  -moz-transform: scale(2); /* FF */
+  -webkit-transform: scale(2); /* Safari and Chrome */
+  -o-transform: scale(2); /* Opera */
+  transform: scale(2);
+  padding: 10px;
+}
+/* Might want to wrap a span around your checkbox text */
+.checkboxtext
+{
+  /* Checkbox text */
+  font-size: 110%;
+  display: inline;
+}
 
 .header-img {
   background-size: cover;
