--- a/backend/app/templates/base.html
+++ b/backend/app/templates/base.html
@@ -40,16 +40,16 @@
       <hr>
     </div>
   </div>
-  <div class="row col-md-offset-1">
-    <div class="col-md-4">
+  <div class="row col-md-offset-1 col-xs-offset-1">
+    <div class="col-xs-4 col-md-4">
       <p>Github: <a target="_blank" href="https://github.com/Skill3t/Tele-Schocken">
       Tele-Schocken</a></p>
     </div>
-    <div class="col-md-4">
+    <div class="col-xs-4 col-md-4">
       <a target="_blank" href="{{ url_for('static',filename='html/impressum.html') }}"">
       Impressum</a>
     </div>
-    <div class="col-md-4">
+    <div class="col-xs-4 col-md-4">
       <a target="_blank" href= "{{ url_for('static',filename='html/datenschutz.html') }}"">
       Datenschutz</a>
     </div>
