--- a/backend/app/templates/gameplay.html
+++ b/backend/app/templates/gameplay.html
@@ -16,9 +16,6 @@
     <div class="col-xs-6 col-md-offset-1 col-md-2">
       <h3 id="StackChips_id">Chips: {{game.stack}}</h3>
     </div>
-    <div class="col-xs-6 col-md-3">
-      <h3 id="StackFirst_id" class="fas fa-gem"> Erste Hälfte</h3>
-    </div>
     <div class="clearfix visible-xs-block visible-sm-block"></div>
     <div class="col-xs-6 col-md-3">
       <h3 id="throw_id">Anzahl würfe:</h3>
@@ -65,20 +62,21 @@
     </div>
     <div class="clearfix visible-xs-block visible-sm-block"></div>
 
-    <div class="col-md-3">
+    <div class="col-xs-12 col-md-3">
       <div class="row col-md-offset-1">
         <div class="col-xs-12 col-md-9 text-center">
           <p>Würfel für Becher wählen</p>
         </div>
       </div>
+      <div class="clearfix visible-xs-block visible-sm-block"></div>
       <div class="row col-md-offset-1">
         <div class="col-xs-4 col-md-3 text-center">
           <input type="checkbox" id="dice1_cb" name="dice1" value="False" checked>
         </div>
-        <div class="col-xs-4 text-center">
+        <div class="col-xs-4 col-md-3 text-center">
           <input type="checkbox" id="dice2_cb" name="dice2" value="False" checked>
         </div>
-        <div class="col-xs-4 text-center">
+        <div class="col-xs-4 col-md-3 text-center">
           <input type="checkbox" id="dice3_cb" name="dice3" value="False" checked>
         </div>
       </div>
@@ -130,7 +128,7 @@
           <th>#</th>
           <th>Name</th>
           <th>Chips</th>
-          <th>Erste Hälfte</th>
+          <th>Hälften</th>
           <th>Würfel1</th>
           <th>Würfel2</th>
           <th>Würfel3</th>
@@ -147,8 +145,7 @@
             <td id="chips{{user.id}}">
               {{user.chips}}
             </td>
-            <td>
-              <i id="first{{user.id}}" class="fas fa-gem"></i>
+            <td id="first{{user.id}}">
             </td>
             <td id="dice1{{user.id}}">
             </td>
@@ -170,16 +167,16 @@
 <div id="admin_interface">
   <hr>
   <div class="row ">
-    <div class="col-xs-4 col-md-4 col-md-offset-1 col-xs-offset-1">
-      <h2>Admin</h2>
+    <div class="col-xs-11 col-md-11 col-md-offset-1 col-xs-offset-1">
+      <h2 id="admin_inforamtion">Admin</h2>
     </div>
   </div>
-  <div class="container">
-    <div class="row justify-content-md-center justify-content-sx-center">
-      <div class="col-xs-11 col-sm-3 col-md-3 col-md-offset-1 col-xs-offset-1">
+  <div class="container justify-content-md-center justify-content-sx-center">
+    <div class="row">
+      <div class="col-xs-3 col-sm-3 col-md-3 col-md-offset-1 col-xs-offset-1">
         <label for="stack_count_id">Anzahl:</label>
         <input type="number" id="stack_count_id" name="stack_count_id"
-           min="0" max="13">
+           min="0" max="13" size="2">
       </div>
       <div class="col-xs-5 col-sm-3 col-md-3">
         <label for="transfer_source">Von:</label>
@@ -671,8 +668,6 @@
     xhttp.send(JSON.stringify({}));
 
     window.setInterval(function(){
-      /// call your function here
-      ///game/<gid>'
       var game = document.getElementById('UUID');
       var gameid = game.innerHTML;
       gameid = gameid.replace(/['"]+/g, '');
@@ -686,14 +681,10 @@
             var waiting_user_id = res.Move
             var waitinguserstorage = document.getElementById('waiting_id');
             var throwbutton = document.getElementById('startgame_id');
-            //set game first half
-            var stackfirsthalf = res['First_Half']
-            var stackfirsthalfstorage = document.getElementById('StackFirst_id');
-            if (stackfirsthalf){
-              stackfirsthalfstorage.style.visibility = "visible";
-            }else{
-              stackfirsthalfstorage.style.visibility = "hidden";
-            }
+            //Admin GAme Info Half count
+            var gamehalfs = res['Game_Half_Count'];
+            var admininfo = document.getElementById('admin_inforamtion');
+            admininfo.innerHTML = 'Admin gespiele Hälften: '+gamehalfs;
             //set stack Chips
             var stackchips = document.getElementById('StackChips_id');
             stackchips.innerHTML = 'Chips: '+ res.Stack
@@ -744,14 +735,10 @@
                 throwbutton.className  = 'buttongray containerturner';
               }
 
-              // set user first First_Half
-              var userfirsthalf = juser['First_Half']
+              var userhalfs = juser['Halfcount']
               var userfirsthalfel = document.getElementById('first'+juser['Id']);
-              if (userfirsthalf){
-                userfirsthalfel.style.visibility = "visible";
-              }else{
-                userfirsthalfel.style.visibility = "hidden";
-              }
+              userfirsthalfel.innerHTML = userhalfs;
+
               // set dices
               var dice1_v = document.getElementById('dice1'+juser['Id']);
               var dice2_v = document.getElementById('dice2'+juser['Id']);
