--- a/backend/app/templates/index.html
+++ b/backend/app/templates/index.html
@@ -5,7 +5,7 @@
 <div class=”main-container”>
     <div class="row">
       <div class="col-md-11 col-md-offset-1">
-        <h1>Welcome to Tele-Schocken</h1>
+        <h1>Online Schocken</h1>
       </div>
     </div>
 
@@ -50,7 +50,7 @@
     <hr>
     <div class="row">
       <div class="col-md-11 col-md-offset-1">
-        <h3>Leitfaden</h3>
+        <h3>Leitfaden Online-Schocken</h3>
       </div>
     </div>
     <div class="row">
@@ -60,7 +60,7 @@
           <li>Der blau hinterlegte Spieler hat die Runde begonnen (nicht im Edge oder Internetexplorer)</li>
           <li>Die Würfel, die raus gelegt werden müssen abgehakt werden</li>
           <li>Nur der Admin hat die Felder zum Verteilen der Chips</li>
-          <li>Die Button zum 6er drehen erscheien nur wenn in einem Wurf mindestens 2 6er enthalten sind</li>
+          <li>Die Button zum 6er drehen erscheienen nur wenn in einem Wurf mindestens zwei 6er enthalten sind</li>
           <li>Im oberen Breich werden Nachrichten in rot angezeigt, welche durch das Spiel leiten</li>
         </ul>
       </div>
