--- a/backend/app/templates/gameplay.html
+++ b/backend/app/templates/gameplay.html
@@ -97,14 +97,14 @@
       </div>
     </div>
     <div class="clearfix visible-xs-block visible-sm-block"></div>
-    <div class="col-md-3">
-      <div id='2_6er' class="col-md-6" hidden>
+    <div class="col-xs-12  col-md-3">
+      <div id='2_6er' class="col-xs-6 col-md-6" hidden>
         <div class="containerturner">
          <img src="{{ url_for('static', filename = 'image/2_6er.svg')}}" alt="change two 6er against one 1er" >
          <button  onclick="turn1()" class="btn" title="6er drehen"></button>
         </div>
       </div>
-      <div id='3_6er' class="col-md-6" hidden>
+      <div id='3_6er' class="col-xs-6 col-md-6" hidden>
         <div class="containerturner">
          <img src="{{ url_for('static', filename = 'image/3_6er.svg')}}" alt="change three 6er against two 1er" >
          <button  onclick="turn2()" class="btn" title="6er drehen"></button>
