fix static filename

--- a/backend/app/templates/index.html
+++ b/backend/app/templates/index.html
@@ -68,19 +68,19 @@
 
     <div class="row">
       <div class="col-md-11 col-md-offset-1 example_img">
-        <img alt="Gameplay" title="Spielaufbau" style="width:100%; height:auto;" src="{{ url_for('static',filename='image/Gameplay01.png') }}">
+        <img alt="Gameplay1" title="Spielaufbau" style="width:100%; height:auto;" src="{{ url_for('static',filename='image/Gameplay01.png') }}">
       </div>
     </div>
     <hr>
     <div class="row">
       <div class="col-md-11 col-md-offset-1 example_img">
-        <img alt="Gameplay" title="Spielaufbau" style="width:100%; height:auto;" src="{{ url_for('static',filename='image/gameplay03.png') }}">
+        <img alt="Gameplay2" title="Spielaufbau" style="width:100%; height:auto;" src="{{ url_for('static',filename='image/Gameplay03.png') }}">
       </div>
     </div>
     <hr>
     <div class="row">
       <div class="col-md-11 col-md-offset-1 example_img">
-        <img alt="Gameplay" title="Spielaufbau" style="width:100%; height:auto;" src="{{ url_for('static',filename='image/Gameplay02.png') }}">
+        <img alt="Gameplay3" title="Spielaufbau" style="width:100%; height:auto;" src="{{ url_for('static',filename='image/Gameplay02.png') }}">
       </div>
     </div>
 
