--- a/backend/app/templates/header.html
+++ b/backend/app/templates/header.html
@@ -3,4 +3,5 @@
   <title>Online-Schocken! Spiele online gemeinsam mit Freunden</title>
   <meta name="description" content="Kostenlos mit Freunden Online-Schocken. Spiele Jule, Mörkeln, Knobeln, Maxen oder Meiern gemeinsam online mit deinen Freunden."/>
   <meta name="google-site-verification" content="fjsoRMBZ8Q-7Xs315KcRj6u8OSboQj3-BmrPO0UK0qo" />
+  <link rel="icon" href="{{ url_for('static',filename='image/dice-312625_640.png') }}">
 </head>
