add header image

--- a/backend/app/templates/base.html
+++ b/backend/app/templates/base.html
@@ -20,7 +20,7 @@
 {% block content %}
 <main>
   <div class="header-img">
-    <img alt="Bone Dice 19th Century" title="Bone Dice 19th Century" style="width:100%; height:auto;" src="{{ url_for('static',filename='image/dice2.png') }}">
+    <img alt="Dicecup" style="width:100%; height:auto;" src="{{ url_for('static',filename='image/cube.jpg') }}">
   </div>
 </main>
 {% endblock %}
