remove unused imports increase cchangs_of_fallling_dice after each half

--- a/backend/app/templates/index.html
+++ b/backend/app/templates/index.html
@@ -4,13 +4,13 @@
 {{ super() }}
 <div class=”main-container”>
     <div class="row">
-      <div class="col-md-11 col-md-offset-1">
+      <div class="col-md-11 col-md-offset-1 col-xs-offset-1">
         <h1>Online Schocken</h1>
       </div>
     </div>
 
     <div class="row ">
-        <div class="col-md-5 col-md-offset-1">
+        <div class="col-md-5 col-md-offset-1 col-xs-offset-1">
           <div class="row">
             <div class="col-md-12">
               <p>Egal ob du <b>Schocken</b>, <b>Jule</b>,  <b>Mörkeln</b>, <b>Knobeln</b>,  <b>Maxen</b> oder <b>Meiern</b> willst, hier bist du richtig!</p>
@@ -22,7 +22,7 @@
             </div>
           </div>
           <div class="row">
-            <div class="col-md-5" >
+            <div class="col-xs-11 col-md-8" >
               <div class="input-group mb-6">
                 <input id="adminname" placeholder="Spielername" type="text" size="20" class="form-control" >
                 <div class="input-group-btn">
