--- a/backend/app/templates/rules.html
+++ b/backend/app/templates/rules.html
@@ -13,13 +13,13 @@
   </div>
 </div>
 <div class="row">
-  <div class="col-md-4">
+  <div class="col-md-4 col-xs-offset-1">
     <h4><a target="_blank" href="https://github.com/Skill3t/Tele-Schocken">
     Github</a></h4>
   </div>
 </div>
 <div class="row">
-  <div class="col-md-4">
+  <div class="col-md-4 col-xs-offset-1">
     <h4><a target="_blank" href="https://www.abenteuerfreundschaft.de/schocken-wuerfel-trinkspiel/">
     Regeln</a></h4>
   </div>
