--- a/backend/app/static/styles/style.css
+++ b/backend/app/static/styles/style.css
@@ -55,6 +55,12 @@ br {
   to {color: black;}
 }
 
+
+video {
+ width: 100%;
+ height: auto;
+}
+
 /* The element to apply the animation to */
 .message {
   color: black;
