--- a/backend/app/templates/index.html
+++ b/backend/app/templates/index.html
@@ -36,6 +36,17 @@
               <p>(Link zum Verteilen an die Mitspieler wird generiert)</p>
             </div>
           </div>
+          <div class="row">
+            <div class="col-md-12">
+              <video  controls>
+               <source src="{{ url_for('static',filename='video/540P_Mittel.mp4') }}" type="video/mp4" media="all and (max-width: 450px)">
+               <source src="{{ url_for('static',filename='video/540P_Mittel.webm') }}" type="video/webm" media="all and (max-width: 450px)">
+               <source src="{{ url_for('static',filename='video/1080P_Hoch.mp4') }}" type="video/mp4">
+               <source src="{{ url_for('static',filename='video/1080P_Hoch.webm') }}" type="video/webm">
+              Your browser does not support the video tag.
+              </video>
+            </div>
+          </div>
         </div>
         <div class="col-md-6">
           <div class="row">
