add video text and readme

--- a/backend/app/templates/index.html
+++ b/backend/app/templates/index.html
@@ -38,6 +38,11 @@
           </div>
           <div class="row">
             <div class="col-md-12">
+              <h2>Keine Lust zu lesen? Hier gehts zum Erklärvideo 👇</h2>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-md-12">
               <video  controls>
                <source src="{{ url_for('static',filename='video/540P_Mittel.mp4') }}" type="video/mp4" media="all and (max-width: 450px)">
                <source src="{{ url_for('static',filename='video/540P_Mittel.webm') }}" type="video/webm" media="all and (max-width: 450px)">
