add coding mission powerd by

--- a/backend/app/templates/base.html
+++ b/backend/app/templates/base.html
@@ -41,17 +41,26 @@
     </div>
   </div>
   <div class="row col-md-offset-1 col-xs-offset-1">
-    <div class="col-xs-4 col-md-4">
+    <div class="col-xs-2 col-md-3">
       <p>Github: <a target="_blank" href="https://github.com/Skill3t/Tele-Schocken">
       Tele-Schocken</a></p>
     </div>
-    <div class="col-xs-4 col-md-4">
+    <div class="col-xs-3 col-md-3">
       <a target="_blank" href="{{ url_for('static',filename='html/impressum.html') }}"">
       Impressum</a>
     </div>
-    <div class="col-xs-4 col-md-4">
+    <div class="col-xs-3 col-md-3">
       <a target="_blank" href= "{{ url_for('static',filename='html/datenschutz.html') }}"">
       Datenschutz</a>
+    </div>
+    <div class="col-xs-4 col-md-3">
+      <p>powerd by:
+        <a href="https://coding-mission.de/">
+          <picture>
+            <img alt="coding-mission_logo" title="powerd by: coding-mission" style="width:32%; height:auto;" src="{{ url_for('static',filename='image/coding-mission_logo_web_farbe.svg') }}">
+          </picture>
+        </a>
+      </p>
     </div>
   </div>
 </footer>
