open coding mission in new tap

--- a/backend/app/templates/base.html
+++ b/backend/app/templates/base.html
@@ -55,7 +55,7 @@
     </div>
     <div class="col-xs-4 col-md-3">
       <p>powerd by:
-        <a href="https://coding-mission.de/">
+        <a target="_blank" href="https://coding-mission.de/">
           <picture>
             <img alt="coding-mission_logo" title="powerd by: coding-mission" style="width:32%; height:auto;" src="{{ url_for('static',filename='image/coding-mission_logo_web_farbe.svg') }}">
           </picture>
